--- a/ShakkiPeli/nbproject/project.properties
+++ b/ShakkiPeli/nbproject/project.properties
@@ -79,7 +79,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=shakkipeli.ShakkiPeli
+javafx.main.class=com.lindqvist.shakkipeli.shakkipeli.ShakkiPeli
 javafx.preloader.class=shakkipeli.preloader.ShakkiPeli_Preloader
 # This project uses Preloader
 javafx.preloader.enabled=true
